<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SmsCheckerActivity">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="35dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:contentDescription="@string/dummy_description"
                android:padding="10dp"
                android:src="@drawable/arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                style="@style/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="malicious Url Detector "
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/ligth_main"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/material_symbols_link_rounded"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/reg_black_text"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/url_waring"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/url_activity_des"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/regular"
                    android:textSize="17sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/copy_sms_past"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/regular"
                    android:textSize="17sp"
                    android:visibility="gone"
                    android:textColor="@color/main_color"
                    />



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/scan_animation"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:lottie_autoPlay="true"
                        app:lottie_rawRes="@raw/scan"
                        app:lottie_loop="true"
                        android:visibility="gone"
                        app:layout_constraintTop_toTopOf="@id/url_edittext"
                        app:layout_constraintBottom_toBottomOf="@id/url_edittext"
                        />

                    <EditText
                        android:id="@+id/url_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_bg"
                        android:gravity="center"
                        android:layout_marginTop="30dp"
                        android:hint="@string/paste_url_here"
                        android:minHeight="60dp"
                        android:padding="16dp"
                        android:textAlignment="textStart"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlCompat" />

                </androidx.constraintlayout.widget.ConstraintLayout>



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/analys_url"
                    android:layout_width="match_parent"

                    android:layout_height="60dp"
                    android:background="@drawable/scam_list_item_bg"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/main_color"
                    android:layout_marginEnd="20dp"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/analyse_url"/>
                
                <View
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>