<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:padding="10dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:background="@drawable/post_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">





    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="50dp"
        android:layout_marginBottom="10dp"

        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- user pic -->
        <androidx.cardview.widget.CardView
            android:id="@+id/user_pic_cardview"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:visibility="visible"
            app:cardCornerRadius="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleX="1.1"
                android:contentDescription="@string/user_image_description"
                android:scaleY="1.1"
                android:src="@drawable/profile_demo" />

        </androidx.cardview.widget.CardView>








    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_divider"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/name"
                style="@style/reg_black_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/user_name"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                style="@style/reg_black_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@null"
                android:gravity="top"
                android:text=""
                android:textAlignment="textStart"
                android:textColor="@color/grey"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@+id/name"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat" />
            <TextView
                android:id="@+id/username"
                style="@style/reg_black_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="-@username"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />


            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:padding="15dp"
                android:contentDescription="@string/other_option_description"
                android:scaleType="centerInside"
                android:src="@drawable/more_option_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textIsSelectable="true"
            android:gravity="top"
            android:padding="10dp"
            style="@style/reg_black_text"
            android:text="Hello text \nthis is  simple text and lets see how this works okay  "
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:ignore="RtlCompat" />



        <LinearLayout
            android:id="@+id/attachment_layout"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_content" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:padding="15dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/description_comment_button"
                android:src="@drawable/comment_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/comments_count_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/comments_count_text"
                style="@style/reg_black_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Read 48 comments"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>




    </LinearLayout>

    <View
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ligth_main"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/action_layout"
    />

    <LinearLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_favorite_border_24"
                app:tint="@color/grey" />

            <TextView
                android:id="@+id/like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="400 Likes" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/hand_icon"
                app:tint="@color/grey" />

            <TextView
                android:id="@+id/victims_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 Victim" />

        </LinearLayout>

        <!--        <LinearLayout-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_weight="1"-->
        <!--            android:gravity="center"-->
        <!--            android:orientation="horizontal">-->
        <!--            <ImageView-->
        <!--                android:layout_width="24dp"-->
        <!--                android:layout_height="24dp"-->
        <!--                android:src="@drawable/baseline_favorite_border_24"-->
        <!--                app:tint="@color/grey"-->
        <!--                />-->

        <!--            <TextView-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="400 Likes"/>-->

        <!--        </LinearLayout>-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>